Improved the layout of ArticleDetail:
  - Used landscapist glide to load images in ArticleDetail.
  - Added publishedAt.
  - Added a link at the bottom leading to the source article.
  - Added Author.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">NewsApi</string>
+    <string name="article_detail_source">Source: %s</string>
+    <string name="article_detail_author">Author: %s</string>
 </resources>
