--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,7 @@
 <resources>
     <string name="app_name">NewsApi</string>
 
+    <string name="news_list_news_feed_button">News Feed</string>
     <string name="news_list_saved_articles_button">Saved Articles</string>
 
     <string name="news_list_saved_no_results_found">No results found.</string>
